# V-EZ

./: .gitignore  CMakeLists.txt
Samples/: CMakeLists.txt
Samples/Data/Shaders/PipelineReflection/: Reflection.comp
Samples/PipelineReflection/: PipelineReflection.cpp
Source/: CMakeLists.txt  VEZ.def  VEZ.h  VEZ_ext.cpp  VEZ_ext.h
Source/Compiler/: GLSLCompiler.cpp  ResourceLimits.cpp  SPIRVReflection.cpp
Source/Core/: Device.cpp  Instance.cpp  Pipeline.cpp  PipelineCache.cpp  StreamEncoder.cpp
cmake/: config.cmake.in
cmake/Hunter/: config.cmake
